syntax = "proto3";

package price;

import "google/protobuf/empty.proto";

option go_package = "pricepb";

message Price {
    string instrumentKey = 1;
    float price = 2;
}

message GetAllPricesResponse {
    repeated Price prices = 1;
}

message PriceChangeResponse {
    Price price = 1;
}

service PriceService {
    rpc GetAllPrices (google.protobuf.Empty) returns (GetAllPricesResponse) {
    };

    rpc PriceChange (google.protobuf.Empty) returns (stream PriceChangeResponse) {
    };
}
